--- a/templates/checklist.html
+++ b/templates/checklist.html
@@ -45,6 +45,11 @@
     </style>
 </head>
 <body>
+    <nav class="navbar navbar-light bg-light mb-4">
+        <div class="container">
+            <a class="navbar-brand" href="{{ url_for('index') }}">Checklist</a>
+        </div>
+    </nav>
     <div class="container">
         <div class="card">
             <div class="card-body p-4">
