--- a/templates/checklist.html
+++ b/templates/checklist.html
@@ -10,7 +10,7 @@
         body {
             background-color: #f8f9fa;
         }
-        .container {
+        .content-container {
             max-width: 800px;
             margin-top: 50px;
         }
@@ -45,12 +45,12 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-light bg-light mb-4">
+    <nav class="navbar navbar-light bg-light py-2 mb-3">
         <div class="container">
             <a class="navbar-brand" href="{{ url_for('index') }}">Checklist</a>
         </div>
     </nav>
-    <div class="container">
+    <div class="container content-container">
         <div class="card">
             <div class="card-body p-4">
                 <div class="d-flex justify-content-between align-items-center mb-4">
