--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
         body {
             background-color: #f8f9fa;
         }
-        .container {
+        .content-container {
             max-width: 600px;
             margin-top: 100px;
         }
@@ -24,12 +24,12 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-light bg-light mb-4">
+    <nav class="navbar navbar-light bg-light py-2 mb-3">
         <div class="container">
             <a class="navbar-brand" href="{{ url_for('index') }}">Checklist</a>
         </div>
     </nav>
-    <div class="container">
+    <div class="container content-container">
         <div class="card">
             <div class="card-body p-5">
                 <h1 class="text-center mb-4">Create New Checklist</h1>
